--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "favicons": "^7.1.5",
+    "favicons-webpack-plugin": "^6.0.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
